cmake_minimum_required(VERSION 3.22)
project(untitled7)

set(CMAKE_CXX_STANDARD 20)

add_executable(code
        database.h
        Memoryriver.h
        Memoryriver.h
        user.cpp
        user.cpp
        book.cpp
        cmd.cpp
        know.h
        know.h
        databaseplus.h
        log.cpp
        log.h
        main.cpp
        cstr.h
        Memoryriver.cpp)
